# Elementary-Status-Widget

./: .gitignore  .gitignore.orig  CMakeLists.txt  CMakeLists.txt.orig  README.md  TODO  elm_status.c  elm_status.c.orig  elm_status.eo  elm_status.eo.c  elm_status.eo.h  elm_status.eo.orig  elm_widget_status.h  index.html  main.c  main.c.orig  params.json  status  status.edc  status.edc.orig  status.edj
